# Differentiator

./: .gitignore  CMakeLists.txt  Differentiator.cpp  RD_funcs.cpp  RD_header.hpp  README.md  differ_header.h  dotfile.dot  makefile
Differentiator.dSYM/Contents/: Info.plist
Differentiator.dSYM/Contents/Resources/DWARF/: Differentiator
Executables/: CMakeLists.txt  Differentiator  Differentiator.cpp  logfile.txt
dots/: dotcode_example.dot  dotfile.dot
include/: RD_header.hpp  akinator.h  differ_header.h  differ_header.h.in
logs/: grammatic_example.c  logfile.txt
src/: CMakeLists.txt  Differentiator.cpp  RD_funcs.cpp  debug_funcs.cpp  differentiator_funcs.cpp  root_funcs.cpp
